--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "cy:dashboard": "cypress run --record --key 9e7df510-87e7-4849-99be-e6ebd2fd130f"
+    "cy:dashboard": "cypress run"
   },
   "author": "Livia Bonifacio",
   "license": "ISC",
